--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 col-md-12">
-						<h1>threadly</h1>
+						<h1>postingly</h1>
 					</div>
 				</div>
 			</div>
